Module 3/m03a06quadratic-handout/grading/2024-09-19-08-48-16/compile.err
Quadratic.java:17: error: bad operand type double for unary operator '!'
        if (a == 0 &! b == 0) {System.out.println("1.0");}
                    ^
1 error
